# arak

./: Cargo.toml  docker-compose.yaml
.github/workflows/: deploy.yaml  rust.yml
docker/: Dockerfile
src/database/: event_visitor.rs  mod.rs  postgres.rs  sqlite.rs  utils.rs
src/indexer/: adapter.rs  mod.rs
