[package]
name = "arak"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
ethrpc = { version = "0.0.8", features = ["http"] }
hex = "0.4"
rusqlite = { version = "0.39", features = ["extra_check"] }
serde = { version = "1", features = ["derive"] }
solabi = "0.3.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
toml = "0.9.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2", features = ["serde"] }
futures = "0.3"
tokio-postgres = "0.7"
pg_bigdecimal = "0.1.5"

[dev-dependencies]
hex-literal = "1.1.0"

# solabi 0.3.0 (crates.io) mis-decodes non-indexed `bytesN` fields (e.g.
# `event T(bytes32 g)`) — every word-circle Escrow/Stats log hits this. The fix
# lives in solabi-rs main (#14, "Fix encode/decode of `Value::FixedBytes` ...")
# but is unreleased/untagged, so patch against the fork's main until a 0.3.1 ships.
[patch.crates-io]
solabi = { git = "https://github.com/bh2smith/solabi-rs", branch = "main" }
